# CosmicWebCrawler

./: .gitignore  README.md  TODO.md  pyproject.toml  run.py
.claude/: CLAUDE.md
.claude/agents/: analysis-coordinator.md  archive-coordinator.md  literature-agent.md  literature-reader-agent.md  peer-reviewer.md  query-agent.md  reduction-coordinator.md  research-assistant.md  sample-coordinator.md
.claude/skills/check-data-quality/: SKILL.md
.claude/skills/check-field-of-view/: SKILL.md
.claude/skills/kcwi-public-data/: SKILL.md
.claude/skills/query-koa/: SKILL.md
.claude/skills/query-ned/: SKILL.md
.claude/skills/query-sdss/: SKILL.md
.claude/skills/query-simbad/: SKILL.md
.claude/skills/query-vizier/: SKILL.md
.claude/skills/sample-bias/: SKILL.md
.claude/skills/target-gp-lyc/: SKILL.md
.claude/skills/target-qso-lya/: SKILL.md
.claude/skills/write-latex-report/: SKILL.md
projects/green-pea-south/: science_config.json
projects/keck-lya-pilot/: science_config.json
projects/lya-cosmos/: science_config.json
src/: check_data_quality.py  check_field_of_view.py  compile_latex.py  compile_reading_list.py  db.py  db_enqueue.py  db_insert_paper.py  db_query.py  db_summary.py  fetch_cutouts.py  fetch_paper_excerpts.py  plot_sample_bias.py  query_ads.py  query_koa.py  query_ned.py  query_sdss.py  query_simbad.py  query_simbad_bibcodes.py  query_vizier.py  sample_bias.py
tests/: smoke_test_cosmos_pilot.py
