[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cosmicwebcrawler"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "astroquery>=0.4.7",
    "astropy>=5.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
